Fix Contact page x-overflow on mobile

--- a/assets/sass/sections/_contact.scss
+++ b/assets/sass/sections/_contact.scss
@@ -49,6 +49,7 @@
         }
 
         .contact-form-col {
+            max-width: 100vw;
             padding: 15px 12px;
         }
     }
